# getstart-opencv

./: .gitignore  CMakeLists.txt  Stitcher
src/: DisplayImage.cpp  mat_mask_operations.cpp  stitcher.cpp
